--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <h2>Welcome to color picker</h2>
-        <button class="changeColorBtn">Pick color</button>
+        <button id="changeColorBtn">Pick color</button>
         <div class="selectedColor">
             <span class="color"></span>
             <span class="hex"></span>
