--- a/popup.html
+++ b/popup.html
@@ -1,28 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="popup.css">
+    <title>Color Picker</title>
 </head>
-
 <body>
     <div class="wrapper">
-        <h2>Welcome to color picker</h2>
-        <button id="changeColorBtn">Pick color</button>
+        <h2>Welcome to my color picker</h2>
+        <button class="changeColorBtn">Pick color</button>
         <div class="selectedColor">
-            <span class="color"></span>
-            <span class="hex"></span>
+            <span class="colorGrid"></span>
+            <span class="colorValue"></span>
         </div>
-    </div>
-
-
-
-
-
-    <script src="popup.js"></script>
+      </div>
+        <script src="popup.js"></script>
 </body>
-
 </html>
